Nix - Fix various issues
- Fix picom on GPU - don't install through nix (and already not using
  hybrid) (ysui/picom#1060)
- Use polybar's update tray module and let it handle its rounded corners
- Fix Emacs jinx - since dynamic module, must also be installed through nix
- Switch to trashy for trashing (keep trash-cli for restore)
- Don't install gpg and pass through nix (version mismatch issues)
- Remove more graphical applications (e.g. mpv) and other programs that I was
  having issues with
- Don't manually lock emacs-overlay to a commit (broke installing jinx and
  unnecessary with flake.lock)
- Add untested WSL configuration; add emacsPgtk for wslg
- Start using unclutter now that trackpoint buttons are actually keys not mouse
  buttons

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -6583,6 +6583,10 @@ pressing \".\" before selecting the word. Otherwise, correct it."
 Jinx similar to spell-fu, but is using enchant.  It gives a lot fewer false positives than aspell so far, and I will probably switch to it completely and remove the rest of my spelling config.  ~jinx-correct~ doesn't have avy support, but it will jump to the closest word, which is good enough if you just fix all visible issues at once
  #+begin_src emacs-lisp
 (use-package jinx
+  ;; must be installed through nix to work with Emacs installed through nix
+  :straight nil
+  ;; necessary when installed through nix
+  :autoload global-jinx-mode
   :init
   (noct-after-buffer (global-jinx-mode))
   :config
