Emacs - Fix magit diffs

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -5977,7 +5977,7 @@ Show GPG information when examining a commit (see [[https://github.com/magit/mag
       (split-string (buffer-string) "\0")))
 
   (defun magit-insert-revision-gpg ()
-    (let* ((rev (car magit-refresh-args))
+    (let* ((rev magit-buffer-revision)
            (res (magit-rev-format-items "%G?%x00%GS%x00%GK%x00%GG" rev))
            (type (aref (car res) 0)))
       (unless (eq type ?N)
